Nav fixed, collapse set to 601px, new views/layout

--- a/public/assets/css/materialize.css
+++ b/public/assets/css/materialize.css
@@ -4041,7 +4041,8 @@ nav .nav-wrapper {
   height: 100%;
 }
 
-@media only screen and (min-width: 993px) {
+/* Modified */
+@media only screen and (min-width: 601px) {
   nav a.button-collapse {
     display: none;
   }
@@ -4075,7 +4076,8 @@ nav .brand-logo.center {
           transform: translateX(-50%);
 }
 
-@media only screen and (max-width: 992px) {
+/* Modified */
+@media only screen and (max-width: 600px) {
   nav .brand-logo {
     left: 50%;
     -webkit-transform: translateX(-50%);
